--- a/posts/201804.md
+++ b/posts/201804.md
@@ -1,30 +1,40 @@
-# Decred Update — April 2018
+# Decred Journal — April 2018
+
+This post covers what happened in Decred last month. Let’s get down to business and have About section at the end.
 
 ## Development
 
-Wallet and node software version 1.2.0 has been released. Decrediton wallet highlights: improved startup experience, redesigned overview page, added basic graphs to visualize statistics and an export to CSV (helpful for tax reporting). dcrd node software highlights: significantly faster startup and compact filters to support light clients. See full release notes and downloads [here](https://github.com/decred/decred-binaries/releases/tag/v1.2.0). Note: for Decrediton use [1.2.1](https://github.com/decred/decred-binaries/releases/tag/v1.2.1) bugfix release.
+Wallet and node software version 1.2.0 has been released. Decrediton wallet highlights: improved startup experience, redesigned overview page, added basic graphs to visualize statistics and an export to CSV (helpful for tax reporting). dcrd node software highlights: significantly faster startup and compact filters to support light clients. See full release notes and downloads [here](https://github.com/decred/decred-binaries/releases/tag/v1.2.0), for Decrediton use [1.2.1](https://github.com/decred/decred-binaries/releases/tag/v1.2.1) bugfix release.
 
 The release process has been improved. Instead of announcing a release date and trying to meet it, a Release Candidate 1 (RC1) will now be posted. After it has been tested an bugfixed with the help of the community, a second candidate (RC2) will be released. This is repeated until an RC version with no apparent bugs becomes the final release. The new process removes a ton of pressure from developers and users and gives more time for testing. As our primary consumer-facing product, Decrediton, is growing in features and complexity, more testing will be required for new releases.
 
 Politeia is "Getting close to a public beta of voting" ([slack](https://decred.slack.com/archives/C0NRMDVMJ/p1523623105000168)). Decred plugin [merged](https://github.com/decred/politeia/pull/242), paywall and voting are in the testing stage. Ticket voting [works](https://twitter.com/decredproject/status/984518284757221376) on testnet via CLI.
 
-Decred.org received a new sleek [exchanges page](https://www.decred.org/exchanges/).
-
-Trezor support advanced with Decred PR [merged](https://github.com/trezor/trezor-mcu/pull/274). Please note this is only firmware support, to be usable it also needs wallet integration.
+Trezor support got closer as Decred patch [was merged](https://github.com/trezor/trezor-mcu/pull/274). Please note this is only firmware support, to be usable it also needs wallet integration.
 
 WooCommerce [Decred plugin](https://github.com/xifrat/decred-woocommerce-plugin) alpha version is ready for testing.
 
-Plenty of new [contributors](https://www.decred.org/contributors/) have joined the project this month.
+Decred.org received a new sleek [exchanges page](https://www.decred.org/exchanges/).
+
+The [contributors](https://www.decred.org/contributors/) page has been updated to add 10 new faces. Some of them are new to the project but others have been contributing for a while.
 
 Dev activity stats for April: 152 active PRs, 125 commits, 21,656 added and 10,288 deleted lines spread across 7 repositories done by 2-7 developers per repository. ([chart](https://twitter.com/decredproject/status/991734153631563776))
+
+## Network
+
+Hashrate: April started at 2.0-2.7 PH/s range and seen a general increase with some big [fluctuations](https://www.reddit.com/r/decred/comments/8doiuo/question_about_network_hashrate_and_mining/) between lows at 2.2 and new all time high above 5.2 PH/s.
+
+Nodes: there are 200 public listening and 500 normal nodes per [dcred.eu](https://dcred.eu/nodeStats) as of May 1. 169 nodes already upgraded to version 1.2.0. Some 30 nodes were observed to be testing Release Candidate versions before the final release.
+
+Ticket price 30-day average has seen a steady rise to 87.5 DCR. Stake participation is solid 46.1% with 3.53 million DCR as of May 1.
 
 ## ASICs
 
 Updates from Obelisk's Taek:
 
-> We got results back. They are more or less on line with the simulations\
-> I didn't realize this, but we don't get the real chips back for 3 more weeks. The ones we've been testing are hacked together into a DIP package (they are BGA chips) that really screws up the results\
-> There's a decent chance that the full bga chips perform better\
+> We got results back. They are more or less on line with the simulations  
+> I didn't realize this, but we don't get the real chips back for 3 more weeks. The ones we've been testing are hacked together into a DIP package (they are BGA chips) that really screws up the results  
+> There's a decent chance that the full bga chips perform better  
 > For the time being though, we're pretty much on track for the hashrates estimated on the website ([slack](https://decred.slack.com/archives/C3P6R055Z/p1523504966000203), Apr 12)
 
 And regarding the June delivery date:
@@ -40,14 +50,6 @@ Halong: B29 units are shipping. The amount of units in first batch was estimated
 By surprise, Innosilicon [announced](https://twitter.com/Inno_Miner/status/986615352200118274) the sale of [D9 DecredMaster](http://www.innosilicon.com/html/d9-miner/index.html) ASIC miner with specs [identical](https://www.hashespersecond.com/2018/04/18/innosilicon-releases-blake2b-blake256-miners-that-mirror-halong-offerings/) to Halong B29 while being much cheaper ($6800 Inno vs $10499 Halong). Expected shipping date of the first batch is April 28-30. The company is active on their [bitcointalk](https://bitcointalk.org/index.php?topic=3345156.0) thread, also see our [reddit](https://www.reddit.com/r/decred/comments/8d7awu/innosilicon_releases_blake2b_blake256_miners_that/).
 
 Just 9 days later Innosilicon [announced](https://twitter.com/Inno_Miner/status/990117591141134336) second batch with delivery on May 7-11 and same price of $6800. ([reddit](https://www.reddit.com/r/decred/comments/8fk2ao/decred_miners_back_in_stock_from_inno_and/))
-
-## Network
-
-Hashrate: April started at 2.0-2.7 PH/s range and seen a general increase with some big [fluctuations](https://www.reddit.com/r/decred/comments/8doiuo/question_about_network_hashrate_and_mining/) between lows at 2.2 and new all time high above 5.2 PH/s.
-
-Nodes: there are 200 public listening and 500 normal nodes per [dcred.eu](https://dcred.eu/nodeStats) as of May 1. 169 nodes already upgraded to version 1.2.0. Some 30 nodes were observed to be testing Release Candidate versions before the final release.
-
-Ticket price 30-day average has seen a steady rise to 87.5 DCR. Stake participation is solid 46.1% with 3.53 million DCR as of May 1.
 
 ## Integrations
 
@@ -67,19 +69,21 @@ Finally,
 
 > viniciusfrias: We're excited to announce PagueCripto.com, a Brazilian crypto-to-fiat payment gateway which accepts Decred among other cryptocurrencies for Brazilians to pay daily bills, such as credit cards, energy, rent, etc, and also to make local bank transfers. Our service is both a web platform and an Android app, and as our community is relevant in Brazil, we are offering a discount coupon (50%) in service fees using DCR until May 14, 2018. Check it out at [paguecripto.com](https://www.paguecripto.com/) and in Google Play Store. ([slack](https://decred.slack.com/archives/C0NRMDVMJ/p1525043419000038))
 
-> michae2xl: Decred is now available on [@ezBtcCanada](https://twitter.com/ezBtcCanada) — an exchange with DCR/CAD trading pair. From Toronto — https://www.ezbtc.ca/trade/alt-coins
+Moving to other countries, good news from Canada:
 
-i2Rav announced a new [trading desk](https://i2trading.com/) that will be offering DCR/EUR pair.
+> michae2xl: Decred is now available on [@ezBtcCanada](https://twitter.com/ezBtcCanada), an exchange with DCR/CAD trading pair. From Toronto — [ezbtc.ca](https://www.ezbtc.ca/)
+
+i2Rav [announced](https://decred.slack.com/archives/C0NRMDVMJ/p1522975903000135) [i2trading.com](https://i2trading.com/), a new trading desk that will be offering DCR/EUR pair:
 
 > Eventually we hope to offer the pair in GBP and YEN as well
 
 [changenow.io](https://changenow.io/), a non-custodian exchange for fast conversions, [added](https://twitter.com/decredproject/status/981623403378454528) DCR.
 
-You can see all exchanges known to support Decred in a [spreadsheet](https://docs.google.com/spreadsheets/d/11Iy2-3oqk-RUT7Fz0CaBcNI289o4YyAXBew86uNCCxQ/edit) maintained by snr01. Many of them are absent from coinmarketcap.
+You can see all exchanges known to support Decred in a [spreadsheet](https://docs.google.com/spreadsheets/d/11Iy2-3oqk-RUT7Fz0CaBcNI289o4YyAXBew86uNCCxQ/edit) maintained by snr01. Many of them are missing from coinmarketcap.
 
 ## Adoption
 
-[The Crypto Lawyers, LLP](https://thecryptolawyers.com/), a crypto exclusive U.S. law firm began accepting Decred. ([reddit](https://www.reddit.com/r/decred/comments/8909x6/the_crypto_lawyers_a_crypto_exclusive_us_law_firm/))
+[The Crypto Lawyers, LLP](https://thecryptolawyers.com/), a crypto exclusive U.S. law firm began accepting Decred ([reddit](https://www.reddit.com/r/decred/comments/8909x6/the_crypto_lawyers_a_crypto_exclusive_us_law_firm/)):
 
 > RAurelius: I think that a law firm accepting Decred is a worthy distinction from other previously publicized companies that accept Decred for typical consumer products. Legal services are severely lacking in the Crypto-sphere, so the publicity is good for everyone in this arena.
 
@@ -87,7 +91,7 @@ Great to see business owners reaching us directly in chat.
 
 [VotoLegal](https://votolegal.com.br/) is [migrating](https://twitter.com/marco_peereboom/status/986699534888730624) from Ethereum to Decred blockchain:
 
-> emiliomann: VotoLegal, a Brazilian project that uses blockchain technology to allow election campaign funding to be transparent and that all transactions conducted are tracked and made available to the citizens, now uses dcrtime and Decred blockchain.\
+> emiliomann: VotoLegal, a Brazilian project that uses blockchain technology to allow election campaign funding to be transparent and that all transactions conducted are tracked and made available to the citizens, now uses dcrtime and Decred blockchain.  
 > https://twitter.com/decred_br/status/986610826051276800 ([slack](https://decred.slack.com/archives/C0NRMDVMJ/p1524065250000150))
 
 ## Partnerships
@@ -167,7 +171,7 @@ Marco in shitcoin talk episode 54 ([youtube](https://www.youtube.com/watch?v=o5B
 
 ## Community Discussions
 
-A debate on protocol security and cost to attack. ([reddit](https://www.reddit.com/r/decred/comments/89mvfd/key_security_flaws_in_decred_limits_the_security/))
+Reddit highlights: A [debate](https://www.reddit.com/r/decred/comments/89mvfd/key_security_flaws_in_decred_limits_the_security/) on Decred protocol security and attack cost, a [comparison](https://www.reddit.com/r/decred/comments/8dszhf/expected_versus_actual_block_production_times/) of expected and actual block production times, a [write-up](https://www.reddit.com/r/decred/comments/8aro9e/thought_experiment_combining_decred_and_monero_to/) on distribution of powers and how Monero could benefit from a PoS governance layer, [two](https://www.reddit.com/r/decred/comments/8a0hh8/antiasic_forks_considered_harmful_by_philip_daian/) [other](https://www.reddit.com/r/decred/comments/8axc02/is_the_war_against_asics_worth_fighting_by_derek/) threads on ASIC resistance, and one discussing different types of [decentralization](https://www.reddit.com/r/decred/comments/895ets/jimmy_song_bitcoin_is_king/).
 
 Very thoughtful discussion on whether it is appropriate to use half naked photos in marketing, followed by meta-discussion how to handle very polarizing issues and unwanted contributions to the marketing efforts of a decentralized project. ([slack](https://decred.slack.com/archives/C5HPHMFQF/p1524182971000248), [continued](https://decred.slack.com/archives/C3PAYQJTW/p1524304298000029))
 
@@ -185,7 +189,7 @@ In April Decred showed a confident recovery after previous months. DCR/USD moved
 
 OOOBTC showed unexpectedly huge DCR trading [volume](https://coinmarketcap.com/exchanges/ooobtc/) of $19 m on April 10 ([reddit](https://www.reddit.com/r/decred/comments/8b40bj/ooobtc_exchange_moving_over_8_million_in_volume/)), it went back to normal 2 weeks later.
 
-On April 25 a wild rush took the price from BTC 0.00777 to 0.0177 in under 30 minutes on Poloniex, with prices on other exchanges following to a lesser degree. Discussions [here](https://www.reddit.com/r/decred/comments/8eq566/uh_wtf_just_happened/) and [here](https://www.reddit.com/r/Dcrtrader/comments/8eq5mm/holy_fing_hell_did_something_just_happen/).
+On April 25 a wild rush took the price from 0.00777 to 0.0177 BTC in under 30 minutes on Poloniex, setting a new USD all time high of ~$165 ($141 world average). Prices on other exchanges followed to a lesser degree. Possible causes were discussed on [reddit](https://www.reddit.com/r/decred/comments/8eq566/uh_wtf_just_happened/). Talking about all time highs, an [indicator](https://alltimehigh.ly/) tracking difference between ATH and current price shows Decred is competitive at retaining USD value.
 
 ## Relevant External
 
@@ -193,10 +197,12 @@ Bittrex finally opened registrations again.
 
 ASIC debates are raging after Bitmain stealth-launched ASICs for Sia, Monero and Ethereum. Most opinions reflect on whether and how to resist ASICs, but some are recognizing the Decred way, like [this](https://tokeneconomy.co/is-the-war-against-asics-worth-fighting-b12c6a714bed) excellent piece.
 
-## About This Update
+The importance of governance is gaining recognition as well. One notable example is [Mike Hearn's AMA](https://www.reddit.com/r/btc/comments/89z483/ama_ask_mike_anything/) where it was a hot topic.
 
-This update was motivated by the desire to expose just how much is happening in Decred and save the time for people unable to actively follow our channels. It aims to cover all relevant developments with a short description and links to read further. It shows the depth of the project and the involvement of the community. We also plan to launch a newsletter and consider a [shorter version](https://github.com/xaur/decred-news/issues/4) if there is such a demand.
+## About This Issue
 
-This is the first issue and feedback is welcome to discover what is best for our readers. Please [join](https://slack.decred.org/) our Slack and write us on [#writers_room](https://decred.slack.com/messages/C9HC2NVTM/) or comment directly on [GitHub](https://github.com/xaur/decred-news/issues).
+This project was motivated by the desire to expose just how much is happening in Decred and save the time for people unable to actively follow our channels. It aims to cover all relevant developments with a short description and links to read further. It shows the depth of the project and the involvement of the community. We also plan to launch a newsletter and consider a [shorter version](https://github.com/xaur/decred-news/issues/4) if there is such a demand.
+
+This is the first issue and feedback is welcome to discover what is best for our readers. Please [join](https://slack.decred.org/) our Slack and write us on [#writers_room](https://decred.slack.com/messages/C9HC2NVTM/) or comment directly on [GitHub](https://github.com/xaur/decred-news/issues). Any [help](https://github.com/xaur/decred-news/issues/2) is welcome too.
 
 Credits (Slack names, alphabetical order): bee, jazzah, Richard-Red, snr01 and vj.
